--- a/Views/Producto/Edit.cshtml
+++ b/Views/Producto/Edit.cshtml
@@ -30,4 +30,7 @@
         </div>
     </form>
     <h1>@ViewData["Message"]</h1>
+    <div>
+        <a asp-action="Index">Back to list</a>
+    </div>
 </div>
